<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:weightSum="1">
    <EditText
        android:id="@+id/activity_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/edittext_bg"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/padding_text"
        android:contentDescription="@string/cd_date"
        android:hint="@string/text_date" />
    <EditText
        android:id="@+id/activity_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/edittext_bg"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/padding_text"
        android:contentDescription="@string/cd_time"
        android:hint="@string/text_time" />
</LinearLayout>